--- a/index.scss
+++ b/index.scss
@@ -13,7 +13,6 @@ body {
 .header {
   display: block;
   text-align: center;
-  width: 375px;
   height: 70px;
   box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.29);
 
@@ -26,6 +25,7 @@ body {
   }
 
   &__button {
+    cursor: pointer;
     position: absolute;
     width: 20px;
     height: 12px;
@@ -69,6 +69,7 @@ body {
   }
 
   &__button {
+    cursor: pointer;
     width: 310px;
     height: 67px;
     background: #08a6e4;
@@ -277,6 +278,10 @@ body {
         width: 192.76px;
         height: 109.93px;
         z-index: 2;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        position: relative;
       }
       &--circle {
         position: relative;
@@ -350,7 +355,7 @@ body {
   }
 
   .brand {
-    background-color: white;
+    background-color: transparent;
     margin: 42px 0;
     position: relative;
     top: 42px;
@@ -359,6 +364,8 @@ body {
     height: 370px;
 
     &__description {
+      width: 55%;
+      background-color: white;
       &--h3 {
         position: relative;
         width: 198px;
@@ -386,6 +393,7 @@ body {
       }
     }
     &__image {
+      width: 40%;
       &--photo {
         position: relative;
         margin-top: 100px;
@@ -464,6 +472,7 @@ body {
     }
   }
   &__button {
+    cursor: pointer;
     background-color: #eb476e;
     position: relative;
     width: 150px;
@@ -527,6 +536,7 @@ body {
     }
   }
   &__button {
+    cursor: pointer;
     background-color: #07ace6;
     position: relative;
     width: 150px;
@@ -590,6 +600,7 @@ body {
     }
   }
   &__button {
+    cursor: pointer;
     background-color: #55dfb4;
     position: relative;
     width: 150px;
@@ -700,6 +711,7 @@ body {
   }
 
   &__button {
+    cursor: pointer;
     position: relative;
     width: 226px;
     height: 57px;
@@ -740,7 +752,6 @@ body {
 
 .footer {
   display: block;
-  width: 375px;
   height: 89px;
   left: 0px;
   box-shadow: 0px -5px 40px rgba(0, 0, 0, 0.2);
@@ -774,6 +785,12 @@ body {
 
   &__logos {
     &--twitter {
+      cursor: pointer;
+      margin-right: 20px;
+    }
+
+    &--facebook {
+      cursor: pointer;
       margin-right: 20px;
     }
   }
@@ -851,8 +868,19 @@ body {
     &__flex {
       display: flex;
       flex-direction: row;
-      justify-content: space-around;
+      justify-content: center;
       align-items: center;
+      gap: 260px;
+    }
+
+    .person {
+      left: 0;
+    }
+    .eye {
+      left: 0;
+    }
+    .group {
+      left: 0;
     }
   }
 
@@ -865,28 +893,53 @@ body {
     gap: 37px;
 
     .first {
+      display: flex;
+      flex-direction: row-reverse;
+      width: 70%;
+      justify-content: space-between;
+      align-items: center;
+      left: 0;
+      top: 0;
+
       &__description {
+        margin-left: 36px;
         &--h3 {
           width: 100%;
           height: 100%;
+          margin-left: 0px;
+          margin-bottom: 30px;
+          font-size: 36px;
+          top: 0;
+        }
+        &--p {
+          margin: 0;
+          margin-top: 17px;
+          font-size: 16px;
+          width: 416px;
+          height: 66px;
+          top: 0;
+          margin-bottom: 50px;
         }
       }
-      display: flex;
-      width: 70vw;
-      height: 300px;
-      justify-content: space-between;
-      align-items: center;
 
       &__image {
+        position: relative;
+        margin-right: 93px;
         &--photo {
-          width: 10vw;
-          height: 15vw;
+          margin: 0;
+          top: -70px;
+          width: 386.44px;
+          height: 219px;
+          left: 0;
         }
 
         &--circle {
-          width: 11vw;
-          height: 11vw;
+          width: 180px;
+          height: 180px;
           border-radius: 41px;
+          top: 50px;
+          left: 200px;
+          transform: rotate(45deg);
         }
       }
 
@@ -896,63 +949,98 @@ body {
     }
 
     .shop {
-      &__description {
-        &--h3 {
-          width: 100%;
-          height: 100%;
-        }
-      }
       background-color: white;
       display: flex;
-      width: 70vw;
-      height: 300px;
-      justify-content: space-between;
+      width: 70%;
+      justify-content: space-evenly;
       align-items: center;
+      left: 0;
+      top: 0;
+      &__description {
+        margin-right: 20px;
+        border-bottom: 4px solid #08a6e4;
+        &--h3 {
+          margin-top: 60px;
+          width: 259px;
+          height: 84px;
+          margin-left: 0px;
+          font-weight: 400;
+          font-size: 36px;
+          line-height: 42px;
+        }
+        &--p {
+          margin: 0;
+          margin-top: 17px;
+          width: 416px;
+          height: 66px;
+        }
+      }
 
       &__image {
+        position: relative;
+        width: 50%;
         &--photo {
-          width: 10vw;
-          height: 15vw;
+          width: 426px;
+          height: 328px;
+          margin: 0;
         }
 
         &--circle {
-          width: 11vw;
-          height: 11vw;
-          border-radius: 41px;
+          width: 320px;
+          height: 320px;
+          border-radius: 50&;
+          top: 0;
+          left: 0;
         }
-      }
-
-      &__description {
-        border-bottom: 4px solid #08a6e4;
       }
     }
 
     .brand {
-      &__description {
-        &--h3 {
-          width: 100%;
-          height: 100%;
-        }
-      }
       display: flex;
-      width: 70vw;
-      height: 300px;
+      width: 70%;
       justify-content: space-between;
-      align-items: center;
-      background-color: transparent;
+      left: 0;
+      top: 0;
+
       &__description {
-        background-color: red;
-        border-bottom: 4px solid #55dfb4;
+        margin-left: 36px;
+        &--h3 {
+          position: relative;
+          width: 198px;
+          height: 72px;
+          font-family: "Raleway";
+          font-style: normal;
+          font-weight: 400;
+          font-size: 30px;
+          line-height: 35px;
+          margin-left: 35px;
+          top: 31px;
+        }
+
+        &--p {
+          margin: 0;
+          margin-top: 17px;
+          margin-left: 35px;
+          font-size: 16px;
+          width: 416px;
+          border-bottom: 4px solid #55dfb4;
+        }
       }
       &__image {
-        &--photo {
-          margin: 0;
-        }
         &--circle {
-          width: 440px;
-          height: 370px;
-          border-radius: 0;
+          position: relative;
+          width: 100%;
+          height: 100%;
+          background-color: #55dfb4;
+          z-index: 1;
           top: 0;
+          left: 0;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          img {
+            width: 80%;
+          }
         }
       }
     }
