--- a/index.css
+++ b/index.css
@@ -117,8 +117,7 @@ body {
 .results .person__img {
   position: relative;
   z-index: 2;
-  top: -58px;
-  left: -5px;
+  left: 20px;
 }
 .results .person__number {
   position: relative;
@@ -126,8 +125,8 @@ body {
   font-size: 20px;
   line-height: 24px;
   letter-spacing: 5.96px;
+  margin: 11px 0;
   color: #000000;
-  top: -58px;
 }
 .results .person__details {
   position: relative;
@@ -135,7 +134,6 @@ body {
   font-size: 17px;
   line-height: 20px;
   text-align: center;
-  top: -58px;
   color: #a5a5a5;
 }
 .results .eye {
@@ -154,9 +152,9 @@ body {
 }
 .results .eye__img {
   position: relative;
+  top: 10px;
+  left: 30px;
   z-index: 2;
-  top: -58px;
-  left: -5px;
 }
 .results .eye__number {
   position: relative;
@@ -164,8 +162,8 @@ body {
   font-size: 20px;
   line-height: 24px;
   letter-spacing: 5.96px;
+  margin: 11px 0;
   color: #000000;
-  top: -58px;
 }
 .results .eye__details {
   position: relative;
@@ -173,7 +171,6 @@ body {
   font-size: 17px;
   line-height: 20px;
   text-align: center;
-  top: -58px;
   color: #a5a5a5;
 }
 .results .group {
@@ -193,8 +190,7 @@ body {
 .results .group__img {
   position: relative;
   z-index: 2;
-  top: -58px;
-  left: -5px;
+  left: 30px;
 }
 .results .group__number {
   position: relative;
@@ -202,8 +198,8 @@ body {
   font-size: 20px;
   line-height: 24px;
   letter-spacing: 5.96px;
+  margin: 11px 0;
   color: #000000;
-  top: -58px;
 }
 .results .group__details {
   position: relative;
@@ -211,7 +207,6 @@ body {
   font-size: 17px;
   line-height: 20px;
   text-align: center;
-  top: -58px;
   color: #a5a5a5;
 }
 
@@ -337,7 +332,7 @@ body {
   height: 370px;
 }
 .details .brand__description {
-  width: 55%;
+  width: 50%;
   background-color: white;
 }
 .details .brand__description--h3 {
@@ -365,7 +360,7 @@ body {
   top: 90px;
 }
 .details .brand__image {
-  width: 40%;
+  width: 35%;
 }
 .details .brand__image--photo {
   position: relative;
@@ -398,7 +393,7 @@ body {
 
 .suscription {
   margin-bottom: 30px;
-  border: 1px solid red;
+  border: 1px solid #eb476e;
   background-color: white;
   position: relative;
   width: 293px;
@@ -415,6 +410,8 @@ body {
   line-height: 24px;
 }
 .suscription__price--p {
+  margin-top: 14px;
+  color: #eb476e;
   font-weight: 300;
   font-size: 46px;
 }
@@ -433,7 +430,7 @@ body {
   content: "";
   height: 15px;
   width: 15px;
-  background-image: url("./assets/checbox-success.png");
+  background-image: url("./assets/Checkbox.png");
   background-position: center center;
   background-size: cover;
   position: absolute;
@@ -472,6 +469,8 @@ body {
   line-height: 24px;
 }
 .suscription1__price--p {
+  color: #07ace6;
+  margin: 14px 0;
   font-weight: 300;
   font-size: 46px;
 }
@@ -492,10 +491,9 @@ body {
   margin-bottom: 15px;
 }
 .suscription1__ul--li:before {
-  content: "";
   height: 15px;
   width: 15px;
-  background-image: url("./assets/Check.png");
+  background-image: url("./assets/Checkbox.png");
   background-position: center center;
   background-size: cover;
   position: absolute;
@@ -534,6 +532,8 @@ body {
   line-height: 24px;
 }
 .suscription2__price--p {
+  color: #55dfb4;
+  margin: 14px 0;
   font-weight: 300;
   font-size: 46px;
 }
@@ -796,6 +796,7 @@ body {
     display: flex;
     flex-direction: column;
     width: 100%;
+    padding-bottom: 100px;
   }
   .results__flex {
     display: flex;
@@ -803,6 +804,7 @@ body {
     justify-content: center;
     align-items: center;
     gap: 260px;
+    margin-top: 100px;
   }
   .results .person {
     left: 0;
@@ -923,9 +925,6 @@ body {
     left: 0;
     top: 0;
   }
-  .details .brand__description {
-    margin-left: 36px;
-  }
   .details .brand__description--h3 {
     position: relative;
     width: 198px;
@@ -1005,7 +1004,7 @@ body {
   }
   .pricing .suscription1__button {
     left: 0;
-    bottom: -100px;
+    bottom: -80px;
   }
   .pricing .suscription2 {
     width: 372px;
@@ -1020,7 +1019,7 @@ body {
   }
   .pricing .suscription2__button {
     left: 0;
-    bottom: -100px;
+    bottom: -80px;
   }
   .div {
     display: flex;
